--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class=" col-xl-3 col-lg-6 col-md-6 col-sm-12">
                         <div class="p-3">
                             <h2>$500</h2>
-                            <h2>wedding basic</h2>
+                            <h2>Wedding basic</h2>
                             <p>For weddings with basic plan
 
                                 and limited item.</p>
@@ -398,7 +398,31 @@
 
     </main>
 
-   
+    <footer>
+        <div class="container-fluid py-5  background-footer">
+            <div class="row d-flex justify-content-around align-items-center">
+                <div class="col-lg-8">
+                    <p>© 2022 bike. All rights reserved</p>
+                </div>
+                <div class="col-lg-2">
+                    <h5>Get the App</h5>
+
+                    <div class=" pb-3">
+                        <a href="https://apps.apple.com/us/app/programming-hub-learn-coding/id1049691226"
+                            target="_blank"> <img width="150px" src="icons/apps2.PNG" alt=""></a>
+                    </div>
+
+                    <div>
+                        <a href="https://play.google.com/store/apps/details?id=learn.programming.courses"
+                            target="_blank"><img width="150px" src="icons/app.1.PNG" alt=""></a>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
 
     <!-- bootstrap-style-js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
