bonus part added

--- a/index.html
+++ b/index.html
@@ -173,6 +173,24 @@
         </section>
 
         <section>
+
+            <div class="container my-5 py-5">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-12 col-sm-12 order-md-1 order-sm-1 order-lg-0">
+                        <h1 class="display-4 fw-bold text-warning pb-3" ><span class=" text-info">Your</span> <i>Dream </i><span class="text-info">Wedding</span></h1>
+                        <p class="fs-5">This is your day, and no one understands this better than we do. From our very first meeting we will work with you to design a matchless, tailor made wedding that represents you and your partner. With our reputation for unique creativity, attention to detail and total reliability "Your Dream Wedding in Spain" will make all your dreams come true and ensure your big day is truly spectacular.</p>
+                        <a class="drem-wedding-site bg-info" href="https://www.whitehallbd.com/">Get Started Online<i
+                                class="fas fa-arrow-right"></i></a>
+                    </div>
+
+                    <div class="col-lg-6 col-md-12 col-sm-12 order-md-0 order-sm-0 order-lg-1">
+                        <img class="img-fluid rounded-3" src="banner photo/bonus part.jpeg" alt="">
+                    </div>
+                </div>
+            </div>
+    </section>
+
+<section>
             <div class="container px-4 my-5">
                 <h1 class="text-center">Our package</h1>
                 <div class="row gx-5 pt-3">
