--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <a class="navbar-brand fw-bold text-white" href="https://www.whitehallbd.com/" target="_blank"> <img
                         width="50px" src="banner photo/Logo-icon-gold-3-removebg.jpg" alt=""> White Hall Convention
-                    Centre</a>
+                    Centre (This is my project)</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
